exports[`test converts basic class shallow 1`] = `
<div
  className="basic-class class"
  onClick={[Function handleOnClick]}>
  <div
    className="group"
    id="group-id">
    <span>
      <strong>
        Hello!
      </strong>
    </span>
    <span
      className="empty" />
  </div>
</div>
`;

exports[`test converts basic pure shallow 1`] = `
<div
  className="basic-pure pure"
  onClick={[Function handleOnClick]}>
  <div
    className="group"
    id="group-id">
    <span>
      <strong>
        Hello!
      </strong>
    </span>
    <span
      className="empty" />
  </div>
</div>
`;
